Fix crash when AC problems that haven't been in problem archives

--- a/fun/codeforces_next_problems.html
+++ b/fun/codeforces_next_problems.html
@@ -21,7 +21,7 @@
     />
 
     <script type="text/javascript">
-      $(function() {
+      $(function () {
         function buildProblemId(obj) {
           return `${obj.contestId || ""}${obj.index}`;
         }
@@ -49,15 +49,21 @@
             ) {
               let problem = submissions[i].problem;
               if (!idToProblem.hasOwnProperty(buildProblemId(problem))) {
-                problem = problems.filter(
-                  p => p.name === submissions[i].problem.name
+                const alternativeProblem = problems.filter(
+                  (p) => p.name === submissions[i].problem.name
                 )[0];
+
+                if (alternativeProblem !== undefined) {
+                  problem = alternativeProblem;
+                }
               }
 
               const problemId = buildProblemId(problem);
-              idToProblem[problemId].solved = true;
-              idToProblem[problemId].solvedTime =
-                submissions[i].creationTimeSeconds;
+              if (idToProblem.hasOwnProperty(problemId)) {
+                idToProblem[problemId].solved = true;
+                idToProblem[problemId].solvedTime =
+                  submissions[i].creationTimeSeconds;
+              }
             }
           }
         }
@@ -65,15 +71,15 @@
         function renderMain(problems, problemStatistics, submissions) {
           prepareMainProblems(problems, problemStatistics, submissions);
 
-          const solvedNum = problems.filter(problem => problem.solved).length;
+          const solvedNum = problems.filter((problem) => problem.solved).length;
           const nextUnsolvedProblems = problems
-            .filter(problem => !problem.solved)
+            .filter((problem) => !problem.solved)
             .sort(compareProblems)
             .slice(0, 5);
 
           $("#mainSolvedNum").text(solvedNum);
 
-          nextUnsolvedProblems.forEach(problem => {
+          nextUnsolvedProblems.forEach((problem) => {
             const url = `https://codeforces.com/problemset/problem/${problem.contestId}/${problem.index}`;
 
             $("#mainProblems tbody").append(`
@@ -121,15 +127,15 @@
         function renderAcmsguru(problems, problemStatistics, submissions) {
           prepareAcmsguruProblems(problems, problemStatistics, submissions);
 
-          const solvedNum = problems.filter(problem => problem.solved).length;
+          const solvedNum = problems.filter((problem) => problem.solved).length;
           const nextUnsolvedProblems = problems
-            .filter(problem => !problem.solved)
+            .filter((problem) => !problem.solved)
             .sort(compareProblems)
             .slice(0, 5);
 
           $("#acmsguruSolvedNum").text(solvedNum);
 
-          nextUnsolvedProblems.forEach(problem => {
+          nextUnsolvedProblems.forEach((problem) => {
             const url = `https://codeforces.com/problemsets/acmsguru/problem/99999/${problem.index}`;
 
             $("#acmsguruProblems tbody").append(`
@@ -161,9 +167,9 @@
 
           const solvedProblems = mainProblems
             .concat(acmsguruProblems)
-            .filter(problem => problem.solved);
+            .filter((problem) => problem.solved);
 
-          solvedProblems.forEach(problem => {
+          solvedProblems.forEach((problem) => {
             let url;
             if (problem.problemset === "MAIN") {
               url = `https://codeforces.com/problemset/problem/${problem.contestId}/${problem.index}`;
@@ -186,7 +192,7 @@
 
           $("#solvedProblems").DataTable({
             columnDefs: [{ orderable: false, targets: 3 }],
-            order: [[6, "desc"]]
+            order: [[6, "desc"]],
           });
         }
 
@@ -195,9 +201,9 @@
           jsonp: "jsonp",
           dataType: "jsonp",
           data: {
-            handle: "goalboy"
+            handle: "goalboy",
           },
-          success: function(response) {
+          success: function (response) {
             const submissions = response.result;
 
             $.ajax({
@@ -205,7 +211,7 @@
               jsonp: "jsonp",
               dataType: "jsonp",
               data: {},
-              success: function(response) {
+              success: function (response) {
                 const problems = response.result.problems;
                 const problemStatistics = response.result.problemStatistics;
 
@@ -214,7 +220,7 @@
                 mainProblems = problems;
                 mainProblemStatistics = problemStatistics;
                 renderSolved(submissions);
-              }
+              },
             });
 
             $.ajax({
@@ -222,9 +228,9 @@
               jsonp: "jsonp",
               dataType: "jsonp",
               data: {
-                problemsetName: "acmsguru"
+                problemsetName: "acmsguru",
               },
-              success: function(response) {
+              success: function (response) {
                 const problems = response.result.problems;
                 const problemStatistics = response.result.problemStatistics;
 
@@ -233,9 +239,9 @@
                 acmsguruProblems = problems;
                 acmsguruProblemStatistics = problemStatistics;
                 renderSolved(submissions);
-              }
+              },
             });
-          }
+          },
         });
       });
     </script>
@@ -246,7 +252,7 @@
         <div class="card">
           <div class="card-header">
             MAIN Solved Problems:
-            <span id="mainSolvedNum" style="color:green"></span>
+            <span id="mainSolvedNum" style="color: green;"></span>
           </div>
           <div class="card-body">
             <h5 class="card-title">
@@ -271,7 +277,7 @@
         <div class="card">
           <div class="card-header">
             ACMSGURU Solved Problems:
-            <span id="acmsguruSolvedNum" style="color:green"></span>
+            <span id="acmsguruSolvedNum" style="color: green;"></span>
           </div>
           <div class="card-body">
             <h5 class="card-title">
