--- a/fun/hackercup_tracker.html
+++ b/fun/hackercup_tracker.html
@@ -164,12 +164,26 @@
               `);
         });
 
-        $("#problems").DataTable({
+        $.fn.dataTable.ext.search.push(function (settings, data, dataIndex) {
+          const filterType = $(
+            "input[type=radio][name=filterType]:checked"
+          ).val();
+
+          return (
+            filterType === "all" || (filterType === "todo") === (data[5] === "")
+          );
+        });
+
+        const table = $("#problems").DataTable({
           paging: false,
           order: [
             [4, "asc"],
             [3, "asc"],
           ],
+        });
+
+        $("input[type=radio][name=filterType]").change(function () {
+          table.draw();
         });
       });
     </script>
@@ -179,9 +193,41 @@
       <div class="col-sm">
         <div class="card">
           <div class="card-header">
-            All Problems
+            Problem List
           </div>
           <div class="card-body">
+            <div class="form-check form-check-inline">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="filterType"
+                id="filterAll"
+                value="all"
+                checked
+              />
+              <label class="form-check-label" for="filterAll">All</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="filterType"
+                id="filterTodo"
+                value="todo"
+              />
+              <label class="form-check-label" for="filterTodo">Todo</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="filterType"
+                id="filterSolved"
+                value="solved"
+              />
+              <label class="form-check-label" for="filterSolved">Solved</label>
+            </div>
+
             <table id="problems" class="table table-striped">
               <thead>
                 <tr>
