--- a/fun/codejam_tracker.html
+++ b/fun/codejam_tracker.html
@@ -81,7 +81,7 @@
         const githubPaths = new Set(data.tree.map((object) => object.path));
 
         problems.forEach((problem) => {
-          const path = `${problem.yearName}/${problem.roundName}/${problem.problemName}/Solution.java`;
+          const path = `${problem.year.name}/${problem.round.name}/${problem.problem.name}/Solution.java`;
 
           if (githubPaths.has(path)) {
             problem.submissionUrl = `https://github.com/charles-wangkai/codejam/blob/master/${path}`;
