--- a/fun/codejam_tracker.html
+++ b/fun/codejam_tracker.html
@@ -114,13 +114,22 @@
           );
         });
 
+        const filterTypeToOrder = {
+          all: [3, "asc"],
+          todo: [3, "asc"],
+          solved: [3, "desc"],
+        };
+
         const table = $("#problems").DataTable({
           paging: false,
-          order: [[3, "asc"]],
+          order:
+            filterTypeToOrder[
+              $("input[type=radio][name=filterType]:checked").val()
+            ],
         });
 
         $("input[type=radio][name=filterType]").change(function () {
-          table.draw();
+          table.order(filterTypeToOrder[$(this).val()]).draw();
         });
       });
     </script>
@@ -139,7 +148,6 @@
                 name="filterType"
                 id="filterAll"
                 value="all"
-                checked
               />
               <label class="form-check-label" for="filterAll">All</label>
             </div>
@@ -150,6 +158,7 @@
                 name="filterType"
                 id="filterTodo"
                 value="todo"
+                checked
               />
               <label class="form-check-label" for="filterTodo">Todo</label>
             </div>
