Remove GitHub api token

--- a/fun/codejam_tracker.html
+++ b/fun/codejam_tracker.html
@@ -21,18 +21,11 @@
       $(async function () {
         const GITHUB_API_BASE_URL =
           "https://api.github.com/repos/charles-wangkai/codejam";
-        const GITHUB_USERNAME = "charles-wangkai";
-        const GITHUB_TOKEN = "c34bea9de0b57e79b3667ebeb7ea4e51a9f6ac7b";
 
         function getGithubApi(url, options = {}) {
           return $.get({
             url: url,
-            beforeSend: function (xhr) {
-              xhr.setRequestHeader(
-                "Authorization",
-                "Basic " + btoa(`${GITHUB_USERNAME}:${GITHUB_TOKEN}`)
-              );
-            },
+            ifModified: true,
             ...options,
           });
         }
