Make dataset not cached

--- a/fun/kickstart_tracker.html
+++ b/fun/kickstart_tracker.html
@@ -33,6 +33,7 @@
         let dataset = await $.get({
           url: "kickstart_dataset.json",
           dataType: "json",
+          cache: false,
         });
 
         let problems = [];
