--- a/fun/codejam_tracker.html
+++ b/fun/codejam_tracker.html
@@ -77,7 +77,9 @@
           const path = `${problem.year.name}/${problem.round.name}/${problem.problem.name}/Solution.java`;
 
           if (githubPaths.has(path)) {
-            problem.submissionUrl = `https://github.com/charles-wangkai/codejam/blob/master/${path}`;
+            problem.submissionUrl = `https://github.com/charles-wangkai/codejam/blob/master/${encodeURIComponent(
+              path
+            )}`;
           }
         });
 
